objects/BW_Related_Item__c.object
<CustomObject>
    <fields>
        <fullName>BW_Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Parent_Item__c</fullName>
        <label>Parent Item</label>
        <referenceTo>BW_RAID_Log__c</referenceTo>
        <relationshipLabel>Related Items</relationshipLabel>
        <relationshipName>Related_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BW_Primary_Owner__c</fullName>
        <formula>BW_Related_Item__r.BW_Primary_Owner__r.FirstName + &quot; &quot; +  BW_Related_Item__r.BW_Primary_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Related_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Item</label>
        <referenceTo>BW_RAID_Log__c</referenceTo>
        <relationshipLabel>Related Items (Related Item)</relationshipLabel>
        <relationshipName>Related_Items1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Status__c</fullName>
        <formula>TEXT( BW_Related_Item__r.BW_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Type__c</fullName>
        <formula>BW_Related_Item__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Related Item</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>